[workspace]
members = [
    "cliquenet",
    "metrics",
    "multisig",
    "sailfish",
    "sailfish-consensus",
    "sailfish-rbc",
    "sailfish-types",
    "tests",
    "timeboost",
    "timeboost-builder",
    "timeboost-sequencer",
    "timeboost-crypto",
    "timeboost-types",
    "timeboost-utils",
    "yapper",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[profile.test]
codegen-units = 16
incremental = false
opt-level = 3

[workspace.dependencies]
aes-gcm = { version = "0.10.3" }
alloy-chains = "0.2.0"
alloy-consensus = { version = "0.15.6", features = ["arbitrary", "k256"] }
alloy-eips = { version = "0.15.6" }
alloy-primitives = { version = "1.0.0", features = ["serde", "rlp"] }
alloy-rlp = { version = "0.3.11", features = ["derive"] }
alloy-signer = "0.15.6"
alloy-signer-local = "0.15.6"
anyhow = "1.0.89"
arbitrary = "1.4.1"
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-poly = "0.5"
ark-secp256k1 = "0.5"
ark-serialize = { version = "0.5", features = ["derive"] }
ark-std = { version = "0.5", default-features = false }
async-lock = "3.3"
async-trait = "0.1"
bimap = "0.6.3"
bincode = { version = "2", features = ["serde"] }
blake3 = { version = "1.5", features = ["serde"] }
bs58 = "0.5.1"
bytes = { version = "1.8.0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
committable = "0.2"
criterion = "0.5"
crossbeam-queue = "0.3.11"
data-encoding = "2.6.0"
derive_builder = "0.20"
digest = "0.10"
dotenvy = "0.15.7"
dyn-clone = "1.0.17"
ed25519-compact = "2.1.1"
either = "1.13.0"
ethereum_ssz = "0.9.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
multiaddr = "0.18.2"
parking_lot = "0.12.3"
portpicker = "0.1.1"
prometheus = "0.14"
quickcheck = "1.0.3"
rand = "0.9"
rayon = "1.10"
reqwest = { version = "0.12" }
serde = { version = "1", features = ["derive", "rc"] }
serde_bytes = "0.11.15"
serde_json = { version = "1.0" }
serde_with = "3.12.0"
sha2 = { version = "0.10", default-features = false }
sha3 = "0.10.8"
snow = "0.9.6"
spongefish = { git = "https://github.com/arkworks-rs/spongefish.git", rev = "e9f7031", features = [
    "arkworks-algebra",
] }
thiserror = "2.0"
tide-disco = "0.9.3"
tokio = { version = "1", default-features = false, features = ["full"] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
turmoil = "0.6.4"
vbs = "0.1"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
