[workspace]
members = [
    "adapters",
    "cliquenet",
    "metrics",
    "multisig",
    "robusta",
    "sailfish",
    "sailfish-consensus",
    "sailfish-rbc",
    "sailfish-types",
    "tests",
    "test-utils",
    "timeboost",
    "timeboost-builder",
    "timeboost-config",
    "timeboost-contract",
    "timeboost-crypto",
    "timeboost-proto",
    "timeboost-sequencer",
    "timeboost-types",
    "timeboost-utils",
    "times",
    "yapper"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
aes-gcm = { version = "0.10.3" }
# derive feature is not exposed via `alloy`, thus has to explicitly declare here
alloy-rlp = { version = "0.3.12", features = ["derive"] }
anyhow = "1.0.89"
arbitrary = { version = "1", features = ["derive"] }
arbtest = "0.3.2"
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-poly = "0.5"
ark-secp256k1 = "0.5"
ark-serialize = { version = "0.5", features = ["derive"] }
ark-std = { version = "0.5", default-features = false }
arrayvec = "0.7.6"
async-trait = "0.1"
axum = "0.8.7"
bimap = "0.6.3"
bincode = { version = "2", features = ["serde"] }
blake3 = { version = "1.5", features = ["serde"] }
bon = "3.6.4"
bs58 = "0.5.1"
bytes = { version = "1.8.0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
committable = "0.2"
constant_time_eq = "0.4"
criterion = "0.7"
crossbeam-queue = "0.3.11"
csv = "1.4.0"
data-encoding = "2.6.0"
derive_more = { version = "2.0", features = ["full"] }
digest = "0.10"
ed25519-compact = "2.2.0"
either = "1.13.0"
ethereum_ssz = "0.9.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
generic-array = { version = "0.14.7", features = ["serde", "zeroize"] }
http = "1.3.1"
ipnet = { version = "2.11.0", features = ["serde"] }
itertools = "0.14.0"
jiff = { version = "0.2", default-features = false, features = ["serde", "std"] }
minicbor = { version = "2.1.1", features = ["full"] }
nohash-hasher = "0.2"
parking_lot = "0.12.3"
prometheus = "0.14"
prost = "0.14.1"
quickcheck = "1.0.3"
quick_cache = "0.6.18"
rand = "0.9"
rayon = "1.10"
rustix = { version = "1.1.2", features = ["process"] }
reqwest = { version = "0.12", features = ["json", "brotli", "gzip", "zstd"] }
secp256k1 = { version = "0.31.0", features = ["global-context", "hashes", "rand", "serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_bytes = "0.11.15"
serde_json = { version = "1.0" }
serde_with = "3.15.1"
sha2 = { version = "0.10", default-features = false }
smallvec = "1.15.1"
snow = "0.10.0"
spongefish = { git = "https://github.com/arkworks-rs/spongefish.git", rev = "e9f7031", features = [
    "arkworks-algebra",
] }
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "url"] }
tokio-util = { version = "0.7.17", features = ["compat", "rt"] }
toml = "0.9"
tonic = "0.14.1"
tonic-prost = "0.14.1"
tonic-prost-build = "0.14.1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "request-id", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
turmoil = "0.7.0"
url = { version = "2.5.4", features = ["serde"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

espresso-types = { git = "https://github.com/EspressoSystems/espresso-network.git" }
hotshot-query-service = { git = "https://github.com/EspressoSystems/espresso-network.git" }

[workspace.dependencies.alloy]
version  = "1.1"
features = [
    "arbitrary",
    "default",
    "getrandom",
    "k256",
    "node-bindings",
    "rlp",
    "serde",
    "signer-mnemonic",
    "transport-ws"
]

[profile.test]
codegen-units = 16
incremental = false
opt-level = 3
