[package]
name = "cliquenet"
description = "A fully connected mesh network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
sailfish = ["async-trait", "sailfish-types"]

[dependencies]
bimap = { workspace = true }
bytes = { workspace = true }
metrics = { path = "../metrics" }
multisig = { path = "../multisig" }
parking_lot = { workspace = true }
rand = { workspace = true }
snow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# optional:
async-trait = { workspace = true, optional = true }
sailfish-types = { path = "../sailfish-types", optional = true }
turmoil = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
portpicker = { workspace = true }
quickcheck = { workspace = true }

[[bench]]
name = "network_bytes"
harness = false

