[package]
name = "cliquenet"
description = "A fully connected mesh network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bimap = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
metrics = { path = "../metrics" }
multisig = { path = "../multisig" }
nohash-hasher = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
snow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# optional:
turmoil = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
portpicker = { workspace = true }
quickcheck = { workspace = true }

[[bench]]
name = "network_bytes"
harness = false

