[package]
name = "cliquenet"
description = "A fully connected mesh network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
metrics = ["dep:prometheus"]

[dependencies]
bimap = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
multisig = { path = "../multisig" }
nohash-hasher = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
snow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# optional:
prometheus = { workspace = true, optional = true }
turmoil = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
quickcheck = { workspace = true }

[[bench]]
name = "network_bytes"
harness = false
