[package]
name = "fcm-net"
version = "0.1.0"
description = "A fully connected mesh network"
edition.workspace = true

[dependencies]
bimap = { workspace = true }
bytes = { workspace = true }
multisig = { path = "../multisig" }
parking_lot = { workspace = true }
rand = { workspace = true }
snow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
turmoil = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
portpicker = { workspace = true }
quickcheck = { workspace = true }

[[bench]]
name = "network_bytes"
harness = false

