[package]
name = "multisig"
description = "Signature set over ED25519 signatures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
benchmark = []

[dependencies]
bimap = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
committable = { workspace = true }
constant_time_eq = { workspace = true }
data-encoding = { workspace = true }
ed25519-compact = { workspace = true }
either = { workspace = true }
rayon = { workspace = true }
secp256k1 = { version = "0.31.0", features = ["global-context", "hashes", "rand", "serde"] }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
