[package]
name = "multisig"
description = "Quorum Signature and Diffie-Hellman Key Exchanges"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
benchmark = []

[dependencies]
adapters = { path = "../adapters" }
bimap = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
committable = { workspace = true }
constant_time_eq = { workspace = true }
ed25519-compact = { workspace = true }
either = { workspace = true }
minicbor = { workspace = true }
rayon = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
