[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
clap = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
tracing = { workspace = true }
warp = "0.3.7"
