[package]
name = "robusta"
description = "espresso client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bincode = { workspace = true }
bon = { workspace = true }
data-encoding = { workspace = true }
espresso-types = { workspace = true }
futures = { workspace = true }
hotshot-query-service = { workspace = true }
hotshot-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
timeboost-types = { path = "../timeboost-types" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
