[package]
name = "sailfish-consensus"
description = "sailfish core consensus protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
test = []

[dependencies]
committable = { workspace = true }
metrics = { path = "../metrics" }
multisig = { path = "../multisig" }
sailfish-types = { path = "../sailfish-types" }
tracing = { workspace = true }

[dev-dependencies]
arbtest = { workspace = true }
criterion = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "consensus_single"
harness = false
