[package]
name = "sailfish-consensus"
description = "sailfish core consensus protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
metrics = ["dep:prometheus", "dep:times", "sailfish-types/metrics"]
test    = []

[dependencies]
committable = { workspace = true }
multisig = { path = "../multisig" }
sailfish-types = { path = "../sailfish-types" }
tracing = { workspace = true }
# optional:
prometheus = { workspace = true, optional = true }
times = { path = "../times", optional = true }

[dev-dependencies]
arbtest = { workspace = true }
criterion = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "consensus_single"
harness = false
