[package]
name = "sailfish-net"
version.workspace = true
edition.workspace = true
description.workspace = true

[[bench]]
name = "network_bytes"
harness = false

[dependencies]
async-trait = { workspace = true }
bimap = { workspace = true }
bytes = { workspace = true }
metrics = { path = "../metrics" }
multisig = { path = "../multisig" }
parking_lot = { workspace = true }
rand = { workspace = true }
sailfish-types = { path = "../sailfish-types" }
snow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
turmoil = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
portpicker = { workspace = true }
quickcheck = { workspace = true }
