[package]
name = "sailfish-rbc"
description = "RBC implementations for use with sailfish"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
committable = { workspace = true }
metrics = { path = "../metrics" }
multisig = { path = "../multisig" }
rand = { workspace = true }
sailfish-types = { path = "../sailfish-types" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

