[package]
name = "sailfish-rbc"
description = "RBC implementations for use with sailfish"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
metrics = ["dep:prometheus", "dep:times"]

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
cliquenet = { path = "../cliquenet" }
committable = { workspace = true }
multisig = { path = "../multisig" }
rand = { workspace = true }
sailfish-types = { path = "../sailfish-types" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# optional:
prometheus = { workspace = true, optional = true }
times = { path = "../times", optional = true }
