[package]
name = "sailfish-types"
description = "API types of sailfish"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
arrayvec = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
committable = { workspace = true }
multisig = { path = "../multisig" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
