[package]
name = "sailfish-types"
description = "API types of sailfish"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
metrics = []

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
arrayvec = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
committable = { workspace = true }
minicbor = { workspace = true }
multisig = { path = "../multisig" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
