[package]
name = "sailfish"
description = "Sailfish is a DAG-based BFT consensus protocol."
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
test  = ["sailfish-consensus/test"]
times = ["sailfish-consensus/times"]

[dependencies]
arrayvec = { workspace = true }
committable = { workspace = true }
futures = { workspace = true }
multisig = { path = "../multisig" }
sailfish-consensus = { path = "../sailfish-consensus" }
sailfish-rbc = { path = "../sailfish-rbc" }
sailfish-types = { path = "../sailfish-types" }
tokio = { workspace = true }
