[package]
name = "state-io"
description = "State I/O"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
dynamodb = ["dep:tokio", "dep:aws-config", "dep:aws-sdk-dynamodb", "dep:tracing"]
fs       = ["dep:tokio"]
no-io    = []

[dependencies]
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
