[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = [
    "dep:alloy",
    "dep:bincode",
    "dep:bytes",
    "dep:prost",
    "dep:quick_cache",
    "dep:tokio-util",
    "dep:tonic",
    "dep:timeboost-config",
    "dep:timeboost-proto",
    "dep:timeboost-utils",
    "ports"
]
ports = ["dep:bincode", "dep:tokio-util"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rustix = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# optional
alloy = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
quick_cache = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
timeboost-config = { path = "../timeboost-config", optional = true }
timeboost-proto = { path = "../timeboost-proto", optional = true }
timeboost-utils = { path = "../timeboost-utils", optional = true }

[[bin]]
name = "block-maker"
path = "src/binaries/block-maker.rs"

[[bin]]
name = "block-verifier"
path = "src/binaries/block-verifier.rs"

[[bin]]
name = "port-alloc"
path = "src/binaries/port-alloc.rs"
required-features = ["ports"]

[[bin]]
name = "run"
path = "src/binaries/run.rs"

[[bin]]
name = "run-committee"
path = "src/binaries/run-committee.rs"
