[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = [
    "dep:alloy",
    "dep:bincode",
    "dep:bytes",
    "dep:either",
    "dep:multisig",
    "dep:prost",
    "dep:robusta",
    "dep:quick_cache",
    "dep:sailfish",
    "dep:tokio-util",
    "dep:tonic",
    "dep:timeboost",
    "dep:timeboost-utils",
    "ports"
]
ports = ["dep:bincode", "dep:tokio-util"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rustix = { workspace = true }
shell-words = "1.1"
tokio = { workspace = true }
tracing = { workspace = true }
# optional
alloy = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
either = { workspace = true, optional = true }
multisig = { path = "../multisig", optional = true }
prost = { workspace = true, optional = true }
quick_cache = { workspace = true, optional = true }
robusta = { path = "../robusta", optional = true }
sailfish = { path = "../sailfish", optional = true }
tokio-util = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
timeboost = { path = "../timeboost", optional = true }
timeboost-utils = { path = "../timeboost-utils", optional = true }

[[bin]]
name = "block-checker"
path = "src/binaries/block-checker.rs"

[[bin]]
name = "block-maker"
path = "src/binaries/block-maker.rs"

[[bin]]
name = "block-verifier"
path = "src/binaries/block-verifier.rs"

[[bin]]
name = "port-alloc"
path = "src/binaries/port-alloc.rs"
required-features = ["ports"]

[[bin]]
name = "run"
path = "src/binaries/run.rs"

[[bin]]
name = "run-committee"
path = "src/binaries/run-committee.rs"
