[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = [
    "dep:alloy",
    "dep:bincode",
    "dep:bytes",
    "dep:either",
    "dep:jiff",
    "dep:multisig",
    "dep:prost",
    "dep:robusta",
    "dep:quick_cache",
    "dep:sailfish",
    "dep:serde",
    "dep:tokio-util",
    "dep:toml",
    "dep:tonic",
    "dep:timeboost",
    "dep:timeboost-utils",
    "ports",
]
netns = ["dep:ipnet"]
ports = ["dep:bincode", "dep:tokio-util"]
scenario = ["dep:jiff", "dep:serde"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rustix = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
# optional
alloy = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
bon = { workspace = true }
bytes = { workspace = true, optional = true }
cliquenet = { path = "../cliquenet", optional = true }
either = { workspace = true, optional = true }
ipnet = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
multisig = { path = "../multisig", optional = true }
prost = { workspace = true, optional = true }
quick_cache = { workspace = true, optional = true }
reqwest = { workspace = true }
robusta = { path = "../robusta", optional = true }
sailfish = { path = "../sailfish", optional = true }
serde = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
timeboost = { path = "../timeboost", optional = true }
timeboost-contract = { workspace = true }
timeboost-utils = { path = "../timeboost-utils", optional = true }

[[bin]]
name = "block-checker"
path = "src/binaries/block-checker.rs"

[[bin]]
name = "block-maker"
path = "src/binaries/block-maker.rs"

[[bin]]
name = "block-verifier"
path = "src/binaries/block-verifier.rs"

[[bin]]
name = "port-alloc"
path = "src/binaries/port-alloc.rs"
required-features = ["ports"]

[[bin]]
name = "run"
path = "src/binaries/run.rs"

[[bin]]
name = "run-committee"
path = "src/binaries/run-committee.rs"
required-features = ["netns", "scenario"]

[[bin]]
name = "net-setup"
path = "src/binaries/net-setup.rs"
required-features = ["netns"]

[[bin]]
name = "funder"
path = "src/binaries/funder.rs"

[[bin]]
name = "assemble"
path = "src/binaries/assemble.rs"

[[bin]]
name = "until"
path = "src/binaries/until.rs"

[[bin]]
name = "tx-generator"
path = "src/binaries/tx-generator.rs"
