[package]
name = "tests"
description = "Integration tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
cliquenet = { path = "../cliquenet", features = ["turmoil"] }
committable = { workspace = true }
crossbeam-queue = { workspace = true }
futures = { workspace = true }
metrics = { path = "../metrics" }
multisig = { path = "../multisig" }
parking_lot = { workspace = true }
rand = { workspace = true }
sailfish = { path = "../sailfish", features = ["test"] }
sailfish-types = { path = "../sailfish-types" }
serde = { workspace = true }
timeboost = { path = "../timeboost" }
timeboost-utils = { path = "../timeboost-utils" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
turmoil = { workspace = true }
url = { workspace = true }
# optional:
anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
minicbor-io = { workspace = true, optional = true }

[features]
bin = ["dep:anyhow", "dep:clap", "dep:minicbor-io"]

[[bin]]
name = "block-verifier"
path = "src/binaries/block-verifier.rs"
required-features = ["bin"]

[[bin]]
name = "run"
path = "src/binaries/run.rs"
required-features = ["bin"]

[[bin]]
name = "port-alloc"
path = "src/binaries/port-alloc.rs"
required-features = ["bin"]
