[package]
name = "timeboost-builder"
description = "Timeboost block builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bincode = { workspace = true }
committable = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
cliquenet = { path = "../cliquenet" }
metrics = { path = "../metrics" }
multisig = { path = "../multisig" }
robusta = { path = "../robusta" }
serde = { workspace = true }
thiserror = { workspace = true }
timeboost-proto = { path = "../timeboost-proto" }
timeboost-types = { path = "../timeboost-types" }
smallvec = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
