[package]
name = "timeboost-builder"
description = "Timeboost block builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
adapters = { path = "../adapters" }
bon = { workspace = true }
bytes = { workspace = true }
cliquenet = { path = "../cliquenet" }
committable = { workspace = true }
metrics = { path = "../metrics" }
minicbor = { workspace = true }
multisig = { path = "../multisig" }
parking_lot = { workspace = true }
rand = { workspace = true }
robusta = { path = "../robusta" }
smallvec = { workspace = true }
thiserror = { workspace = true }
timeboost-config = { path = "../timeboost-config" }
timeboost-types = { path = "../timeboost-types" }
tokio = { workspace = true }
tracing = { workspace = true }

