[package]
name = "timeboost-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
ark-std = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
cliquenet = { path = "../cliquenet" }
jiff = { workspace = true }
multisig = { path = "../multisig" }
rand = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
timeboost-crypto = { path = "../timeboost-crypto" }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[[bin]]
name = "mkconfig"
path = "src/binaries/mkconfig.rs"
